address_util_test_SOURCES = address_util_test.c ../../address_util.c  ../../address_util.h ../../common_macro.h ../../logger.h
address_util_test_CFLAGS = -Wall -Wstrict-prototypes -Wmissing-prototypes -Wpointer-arith -Wno-sign-compare -Wno-traditional -Wreturn-type -Wswitch -g3 -ggdb3 -pipe -Ibson -Idns -std=gnu99 -O2 -DPOWERDNS

