bin_PROGRAMS = string_util_test address_util_test bhash_test command_test

string_util_test_SOURCES = string_util_test.c ../../string_util.c ../../string_util.h ../../logger.c ../../logger.h ../../common_macro.h 
string_util_test_CFLAGS = -Wall -Wstrict-prototypes -Wmissing-prototypes -Wpointer-arith -Wno-sign-compare -Wno-traditional -Wreturn-type -Wswitch -g3 -ggdb3 -pipe -Ibson -Idns -std=gnu99 -O2 -DPOWERDNS

address_util_test_SOURCES = address_util_test.c ../../address_util.c ../../address_util.h ../../string_util.c ../../logger.c ../../string_util.h ../../logger.h ../../common_macro.h 
address_util_test_CFLAGS = -Wall -Wstrict-prototypes -Wmissing-prototypes -Wpointer-arith -Wno-sign-compare -Wno-traditional -Wreturn-type -Wswitch -g3 -ggdb3 -pipe -Ibson -Idns -std=gnu99 -O2 -DPOWERDNS

bhash_test_SOURCES = bhash_test.c ../../bhash.c ../../bhash.h ../../string_util.c ../../logger.c ../../string_util.h ../../logger.h ../../common_macro.h 
bhash_test_CFLAGS = -Wall -Wstrict-prototypes -Wmissing-prototypes -Wpointer-arith -Wno-sign-compare -Wno-traditional -Wreturn-type -Wswitch -g3 -ggdb3 -pipe -Ibson -Idns -std=gnu99 -O2 -DPOWERDNS

command_test_SOURCES = command_test.c ../../string_util.c ../../logger.c ../../string_util.h ../../logger.h ../../common_macro.h 
command_test_CFLAGS = -Wall -Wstrict-prototypes -Wmissing-prototypes -Wpointer-arith -Wno-sign-compare -Wno-traditional -Wreturn-type -Wswitch -g3 -ggdb3 -pipe -Ibson -Idns -std=gnu99 -O2 -DPOWERDNS
