bin_PROGRAMS = string_util_test address_util_test bhash_test command_test config_test

string_util_test_SOURCES = string_util_test.c ../../string_util.c ../../string_util.h ../../logger.c ../../logger.h ../../common_macro.h 
string_util_test_CFLAGS = -Wall -Wstrict-prototypes -Wmissing-prototypes -Wpointer-arith -Wno-sign-compare -Wno-traditional -Wreturn-type -Wswitch -g3 -ggdb3 -pipe -I../../bson -I../../dns -std=gnu99 -O2 -DPOWERDNS

address_util_test_SOURCES = address_util_test.c ../../address_util.c ../../address_util.h ../../string_util.c ../../logger.c ../../string_util.h ../../logger.h ../../common_macro.h 
address_util_test_CFLAGS = -Wall -Wstrict-prototypes -Wmissing-prototypes -Wpointer-arith -Wno-sign-compare -Wno-traditional -Wreturn-type -Wswitch -g3 -ggdb3 -pipe -I../../bson -I../../dns -std=gnu99 -O2 -DPOWERDNS

bhash_test_SOURCES = bhash_test.c ../../bhash.c ../../bhash.h ../../string_util.c ../../logger.c ../../string_util.h ../../logger.h ../../common_macro.h 
bhash_test_CFLAGS = -Wall -Wstrict-prototypes -Wmissing-prototypes -Wpointer-arith -Wno-sign-compare -Wno-traditional -Wreturn-type -Wswitch -g3 -ggdb3 -pipe -I../../bson -I../../dns -std=gnu99 -O2 -DPOWERDNS

command_test_SOURCES = command_test.c ../../string_util.c ../../logger.c ../../string_util.h ../../logger.h ../../common_macro.h 
command_test_CFLAGS = -Wall -Wstrict-prototypes -Wmissing-prototypes -Wpointer-arith -Wno-sign-compare -Wno-traditional -Wreturn-type -Wswitch -g3 -ggdb3 -pipe -I../../bson -I../../dns -std=gnu99 -O2 -DPOWERDNS

config_test_SOURCES = config_test.c ../../json_parser.c ../../config_manager.c ../../bson_helper.c ../../bson/bson.c ../../bson/encoding.c ../../bson/numbers.c ../../json_parser.h ../../address_util.c ../../config_manager.h ../../bson_helper.h ../../bson/bson.h ../../bson/encoding.h ../../bson/numbers.h ../../address_util.h ../../string_util.c ../../logger.c ../../string_util.h ../../logger.h ../../common_macro.h 
config_test_CFLAGS = -Wall -Wstrict-prototypes -Wmissing-prototypes -Wpointer-arith -Wno-sign-compare -Wno-traditional -Wreturn-type -Wswitch -g3 -ggdb3 -pipe -I../../bson -Idns -std=gnu99 -O2 -DPOWERDNS
